@@ -1,3 +1,4 @@
+#	$NetBSD: Makefile.inc,v 1.4 1995/02/27 13:24:22 cgd Exp $
 #       @(#)Makefile.inc	8.1 (Berkeley) 6/4/93
 
 .PATH: ${.CURDIR}/db/recno
