@@ -1,3 +1,5 @@
+.\"	$NetBSD: re_format.7,v 1.5 1995/02/27 13:28:52 cgd Exp $
+.\"
 .\" Copyright (c) 1992, 1993, 1994 Henry Spencer.
 .\" Copyright (c) 1992, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
