@@ -1,3 +1,5 @@
+.\"	$NetBSD: regex.3,v 1.4 1995/02/27 13:29:31 cgd Exp $
+.\"
 .\" Copyright (c) 1992, 1993, 1994 Henry Spencer.
 .\" Copyright (c) 1992, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
